# epsp-kit

./: .gitignore  README.md  pyproject.toml
src/epspkit/cli/: main.py
src/epspkit/core/: config.py  context.py  math.py
src/epspkit/docs/: epspkit.md
src/epspkit/examples/: main.py  quickstart.ipynb
src/epspkit/features/: base.py  epsp.py  fiber_volley.py  pop_spike.py  stim_artifact.py
src/epspkit/io/: read_write.py
src/epspkit/pipeline/: __init__.py  api.py
src/epspkit/transforms/: __init__.py  average.py  baseline.py  stim_artifact.py
src/epspkit/viz/: annotated.py  base.py  derivative.py  input_output.py  sweep.py
